[package]
name = "driver-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
phper = "0.12"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }

[dev-dependencies]
phper-test = { version = "0.12" }
