[package]
name = "driver-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
phper =  { version = "0.13", branch = "master",git = "https://github.com/dmalusev/phper" }
parking_lot = { version = "0.12.1", features = ["arc_lock"] }

[dev-dependencies]
phper-test = { version = "0.13", branch = "master",git = "https://github.com/dmalusev/phper" }
